# hachidaishu-translation

./: .gitignore  README.md  devenv.nix  devenv.yaml  gen-translations.py  jadh2024-experiment.sh  jadh2024-sample-eval.py  jadh2024-waka-llm-results.csv  jadh2024-waka-sample.txt  pyproject.toml  requirements.txt
src/hachidaishu_translation/: cli.py  db.py  dictionaryconverter.py  eval.py  format.py  gen.py  hachidaishu.py  log.py  models.py  utils.py
