[project]
name = "hachidaishu-translation"
version = "0.2.0"
description = "Translate Japanese waka poems into English using LLMs, aligning them at the word level and perform evaluations."
authors = [
    { name = "Bor Hodošček", email = "dev@bor.space" }
]
dependencies = [
    # "outlines>=0.0.46", # Install from git
    "magentic>=0.32.0",
    "litellm>=1.44.14",
    "tiktoken>=0.7.0",
    "transformers>=4.44.2",
    "datasets",
    "hf-transfer>=0.1.8",
    "sentence-transformers>=3.0.1",
    "jaconv>=0.4.0",
    "tqdm>=4.64.1",
    "loguru>=0.7.2",
    "duckdb>=1.0.0",
    "numpy<2.0.0",
    "nltk>=3.9.1",
    "rouge-metric>=1.0.1",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "word-alignment-visualization>=0.1.3",
    "prettytable>=3.11.0",
    # "llama-cpp-python>=0.2.90",
    "sentencepiece>=0.2.0",
    "protobuf>=5.27.3",
    "setuptools>=70.0.0",
    "outlines>=0.0.46",
]
readme = "README.md"
requires-python = ">= 3.12, <4.0"

[project.optional-dependencies]
# uv sync --extra rocm
# rocm = [
#     "torch==2.4.0+rocm6.1",
#     "pytorch-triton-rocm==3.0.0",
# ]

# uv vevn
# uv pip install torch
# uv sync --extra cuda
cuda = [
    "torch>=2.4.1",
    "accelerate",
    "bitsandbytes",
    "flash-attn", # NOTE: First install with: pip install flash-attn --no-build-isolation
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
override-dependencies = [
    # "litellm==1.44.14",
    # "requests==2.32.3",
    # "accelerate==0.33.0",
    # "datasets==2.21.0",
]
no-build-isolation-package = ["flash-attn"]
find-links = ["https://download.pytorch.org/whl/torch_stable.html"]

[tool.uv.sources]
outlines = { git = "https://github.com/outlines-dev/outlines" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hachidaishu_translation"]
